--- a/pages/quarto.html
+++ b/pages/quarto.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <img src="../img/logo.png" alt="logo">
-            <a href="index.html">HOME</a>
+            <a href="../index.html">HOME</a>
             <a href="contato.html">FALE CONOSCO</a>
             <a href="#">ROTA</a>
         </nav>
