--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <nav>
             <img src="../img/logo.png" alt="logo">
-                <a href="contato.html">FALE CONOSCO</a>
+                <a href="../pages/contato.html">FALE CONOSCO</a>
                 <a href="../pages/rota.html">ROTA</a>
-                <a href="quarto.html">QUARTOS</a>
+                <a href="../pages/quarto.html">QUARTOS</a>
         </nav>
     </header>
     <main>
