--- a/pages/contato.html
+++ b/pages/contato.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <img src="../img/logo.png" alt="">
-            <a href="index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="#">Rota</a>
             <a href="quarto.html">Quartos</a>
         </nav>
