--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <img src="../img/logo.png" alt="logo">
+            <img src="img/logo.png" alt="logo">
                 <a href="pages/contato.html">FALE CONOSCO</a>
                 <a href="pages/rota.html">ROTA</a>
                 <a href="pages/quarto.html">QUARTOS</a>
